Fixes losing focus while space bar pressed.

BUG=615520

Review-Url: https://codereview.chromium.org/2017833003
Cr-Commit-Position: refs/heads/master@{#397492}

Former-commit-id: 934405233ea138ad8c27528779b6f9071957b8bc